# mlir-cgra

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md
.github/workflows/: main.yml
build_tools/: build_llvm.sh  build_mlir.sh  build_proj.sh  build_soda.sh
dev/: gemmrelu.linalg.singleout.fused.bufferized.mlir  gemmrelu.linalg.singleout.fused.bufferized.tiled.mlir  gemmrelu.linalg.singleout.fused.mlir  gemmrelu.linalg.singleout.fused.tiled.mlir
dev/cgra_generation/: gemmreluadd.cgra.mlir  gemmreluadd.linalg.tiled.mlir  script.sh
dev/integration_test/: cgra.cpp  gemmreluadd.cgra.ll  gemmreluadd.cgra.llvm.mlir  gemmreluadd.cgra.mlir  gemmreluadd.cgra.outlined.host.mlir  gemmreluadd.cgra.outlined.mlir  gemmreluadd.linalg.tiled.ll  gemmreluadd.linalg.tiled.llvm.mlir  gemmreluadd.main.mlir  main.cpp  main.ll  runtime.cpp  script
dev/linalg_generation/: gemmreluadd.linalg.fused.mlir  gemmreluadd.linalg.mlir  gemmreluadd.mhlo.mlir  script.sh
dev/linalg_optimization/: gemmreluadd.linalg.finalized.mlir  gemmreluadd.linalg.tiled.mlir  script.sh
dev/onnx_generation/: gen_gemmreluadd_onnx.py  script.sh
docs/tutorials/date2022/: README.md
docs/tutorials/isc2022/: README.md
docs/tutorials/naml2022/: .gitignore  README.md  tutorial.ipynb
docs/tutorials/pact2022/: .gitignore  README.md
experiments/: .gitignore
experiments/CamemBERT/cgra/: main.cpp
experiments/CamemBERT/model/: CamemBERT.py
experiments/MiniLM/baseline/: script4x4-doublebuffer.sh
experiments/MiniLM/cgra/: script4x4-doublebuffer.sh  script4x4.sh  script8x8-doublebuffer.sh  script8x8.sh
experiments/MiniLM/model/: MiniLM.py
experiments/Sentence-BERT/baseline/: script8x8-doublebuffer.sh  script8x8.sh
experiments/Sentence-BERT/golden/: main.cpp
experiments/Sentence-BERT/model/: Sentence-BERT.py
experiments/VIT/golden/: main.cpp  script.sh
experiments/VIT/model/: vit.py
experiments/bert/baseline/: main.cpp  script.sh  script4x4.sh
experiments/bert/cgra/: main.cpp  script.sh
experiments/bert/golden/: 02-linalg.mlir  03-finalized.mlir  04-llvm.mlir  main.cpp  script.sh
experiments/bert/model/: bert.py
experiments/demo/baseline/: 05-tiled.mlir  06-locating.mlir  07-host.mlir  08-accel.mlir  09-host-llvm.mlir  09-model.ll  10-accel-llvm.mlir  11-model.ll  12-accel.bc  12-accel.ll  CustomizedRuntime.cpp  main.cpp  script.sh
experiments/demo/cgra/: 05-tiled.mlir  06-locating.mlir  07-host.mlir  08-llvm.mlir  09-model.ll  main.cpp  script.sh
experiments/demo/golden/: 00-onnx.mlir  03-finalized.mlir  04-llvm.mlir  05-model.ll  main.cpp  script.sh
experiments/demo/model/: 01-mhlo.mlir  gemmreluadd.onnx  run_gemmreluadd.py  script.sh
experiments/polybench/: README.md  jobs-bambu-nangate-fast.sh  jobs-bambu-nangate-medium.sh  jobs-bambu-openroad-fast-reordered.sh  jobs-bambu-openroad-fast.sh  jobs-bambu-openroad-medium.sh  jobs-broken.sh  jobs-fast.sh  jobs-fast.txt  jobs-long.sh  jobs-medium.sh  jobs-vitishls-fast.sh  jobs-vitishls-long.sh  xilinx-jobs-medium.sh
experiments/test_vitis/: .gitignore  vitis_flow.sh
include/soda/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Dialect/: CMakeLists.txt
lib/Misc/: AffineDataCopyGen.cpp  AffineLoopPermutation.cpp  AffineLoopTiling.cpp  CMakeLists.txt  ForwardLinalgOps.cpp  ForwardMemrefAlloc.cpp  FuncToLLVM.cpp  LinalgTilingForCGRA.cpp  MemrefEraseDealloc.cpp  MiscPasses.cpp  PassDetail.h  PassDetailForFuncToLLVM.h  PassDetailForStdToLLVM.h  StandardToLLVM.cpp
python/: CMakeLists.txt  SODAExtension.cpp
sim/: CGRAFunc.h  Common.h  GlobalRuntime.cpp  Simulator.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  soda-capi-test.c
test/Conversion/KernelsToSODA/: affineFor-to-SODA.mlir  all-to-SODA.mlir  linalgConv-to-SODA.mlir  linalgDot-to-SODA.mlir  linalgGeneric-to-SODA.mlir  linalgMatmul-to-SODA.mlir  scfFor-to-SODA.mlir
test/Conversion/LinalgToLLVM/: lower-to-llvm.mlir
test/Dialect/Affine/: buffer-trick.mlir  fusion.mlir  permute.mlir  tile.mlir  unroll.mlir
test/Dialect/Linalg/: forward-linalg-ops.mlir  tile.mlir
test/Dialect/Memref/: erase-dealloc.mlir  forward-memref-allocations.mlir
test/Dialect/SODA/: .host-generation.mlir  async-region.mlir  host-generation.mlir  kernel-generation.mlir  ops.mlir  outlining-matmul.mlir  outlining.mlir  tmp.mlir  xml-generation.mlir  xml-interface-generation.mlir
test/Runner/: matmul.mlir
test/Translate/: soda-translate.mlir
test/llvm_plugin/: XMLwriter.ll  alloca-namer.ll  namer.ll  vhls-rewriter.ll  xml-writer.ll
test/python/: simple-parse.py
test/soda-opt/: opt-matmul-for-bambu.mlir  opt-matmul-for-vitishls.mlir  opt-matmul.mlir  soda-opt.mlir
tools/: CMakeLists.txt  generateCustomizedRuntime.py  removeRedundantDeclares.py
tools/mlir-runner/: CMakeLists.txt  mlir-runner.cpp
tools/soda-opt/: CMakeLists.txt  soda-opt.cpp
tools/soda-translate/: CMakeLists.txt  soda-translate.cpp
(+384 files in other folders)
